--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class = "meal-wrapper">
       <div class = "meal-search">
         <h2 class = "title">Recipe Finder: Meals You Can Make with Your Ingredients</h2>
-        <blockquote>Real food doesn't have ingredients, real food is ingredients.<br>
-          <cite>- Jamie Oliver</cite>
+        <blockquote><br>
+          <cite> Integrative Programming and Technologies I </cite>
         </blockquote>
 
         <div class = "meal-search-box">
