--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class = "meal-wrapper">
       <div class = "meal-search">
         <h2 class = "title">Recipe Finder: Meals You Can Make with Your Ingredients</h2>
-        <blockquote><br>
+        <blockquote> Integrative Programming and Technologies I <br>
           <cite> Integrative Programming and Technologies I </cite>
         </blockquote>
 
