--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class = "meal-search">
         <h2 class = "title">Recipe Finder: Meals You Can Make with Your Ingredients</h2>
         <blockquote> Integrative Programming and Technologies I <br>
-          <cite> Integrative Programming and Technologies I </cite>
+          <cite> </cite>
         </blockquote>
 
         <div class = "meal-search-box">
