--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class = "meal-result">
-        <h2 class = "title">Your Search Results:</h2>
+        <h2 class = "title">Results for Your Ingredients:</h2>
         <div id= "meal">
           <!-- meal item -->
           <!-- <div class = "meal-item">
