--- a/index.html
+++ b/index.html
@@ -71,5 +71,14 @@
 
 
   <script src = "script.js"></script>
+    <footer>
+  <p>IPT Project by: </p>
+  <p>Angeles, Mark Juzz</p>
+  <p>Corros, Kenneth</p>
+  <p>Dedeles, Jemima</p>
+  <p>Monencillo, Princess Jean</p>
+ </footer>   
+  
 </body>
+
 </html>
